# parquet-converters

./: .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  AUTHORS.txt  CMakeLists.txt  Dockerfile  README.md  README.txt  default.nix  loader.cpp  loader.h  parquet2hdf5.cpp  parquet2syn2.cpp  parquet2syn2p.cpp  parquetwriter.cpp  parquetwriter.h  test_convert.cpp  touch2parquet.cpp  touch2parquetp.cpp
.ci/: test_circuit1k_output.sh  test_circuit1k_touches.sh  test_circuit2k_output.sh  test_circuit2k_touches.sh  test_index_truncation.sh
.github/workflows/: test.yml
.jenkins/: config.groovy  test_circuit1k.sh  test_circuit1k_output.sh  test_circuit1k_touches.sh  test_circuit2k.sh  test_circuit2k_output.sh  test_circuit2k_touches.sh  test_index_truncation.sh
CMake/: CompilerFlagsHelpers.cmake  ReleaseDebugAutoFlags.cmake
examples/: touch_display_convert.cpp
include/: progress.hpp
include/neuron_parquet/: circuit.h  touches.h
lib/: CMakeLists.txt  circuit_defs.h  circuit_reader_parquet.cpp  circuit_reader_parquet.h  circuit_writer_syn2.cpp  circuit_writer_syn2.h  converter.h  generic_reader.h  generic_writer.h  loader.cpp  loader.h  parquetwriter.cpp  parquetwriter.h  progress.cpp  progress.h  syn2_circuit.cpp  syn2_circuit.h  syn2_util.h  test_touch_converter.cpp  touch_converter.cpp  touch_defs.h  touch_reader.cpp  touch_reader.h  touch_writer_parquet.cpp  touch_writer_parquet.h  zeromem_queue.h
lib/circuit/: circuit_defs.h  parquet_reader.cpp  parquet_reader.h  sonata_file.cpp  sonata_file.h  sonata_writer.cpp  syn2_writer.cpp  syn2_writer.h  syn2hdf5.cpp  syn2hdf5.h
lib/touches/: parquet_writer.cpp  parquet_writer.h  touch_defs.h  touch_reader.cpp  touch_reader.h
python/: index_writer.py
src/: CMakeLists.txt  circuit.h  converter.h  generic_reader.h  generic_writer.h  indexah.cpp  parquet2hdf5.cpp  touch2parquet.cpp  touches.h  version.h.in
src/circuit/: circuit_defs.h  parquet_reader.cpp  parquet_reader.h  sonata_file.cpp  sonata_file.h  sonata_writer.cpp  sonata_writer.h
src/index/: index.cpp  index.h  index_bindings.cpp
src/touches/: parquet_writer.cpp  parquet_writer.h  touch_defs.h  touch_reader.cpp  touch_reader.h
tests/: CMakeLists.txt  compare_columns.py  testCircuit.parquet  test_convert.cpp  test_indexing.cpp  test_indexing.py  test_integration.py  test_multi_parquet2syn.cpp  test_parallel_parquet2syn.cpp  test_parquet.cc  test_parquet2syn.cpp  test_requirements.txt  test_touch_convert.cpp  touches.0
tests/touches_v1/: touchesData.0
tests/touches_v2/: touches.0  touchesData.0
tests/touches_v3/: touches.0  touchesData.0
